Fix: page/login.component

--- a/WebApp-collab/src/app/pages/login/login.component.html
+++ b/WebApp-collab/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex p-2 bd-highlight justify-content-center background-box">
+<div class="d-flex justify-content-center background-box">
     <div class="mt-5 position-absolute top-50 start-50 translate-middle">
         <div class="ms-3 mt-5 card">
             <div class="row gx-4">
@@ -8,8 +8,10 @@
                     >
                 </div>
                 <div class="col-24 col-md-8 col-sm-12">
-                    <p class="mt-3 text-start fs-2">
-                        Login
+                    <p class="mt-3 text-start h2">
+                        <strong>
+                            Login
+                        </strong>
                     </p>
                     <p class="mt-5 text-start fs-4">
                         Acesse a sua conta.
@@ -31,7 +33,7 @@
                             <input type="password" class="form-control">
                         </div>
                         <div class="mt-3 col-md-4 col-sm-4 d-grip gap-2">
-                            <button type="button" class="btn btn-primary">
+                            <button type="button" class="btn button-login">
                                 Acessar
                             </button>
                         </div>
