--- a/WebApp-collab/src/app/pages/login/login.component.css
+++ b/WebApp-collab/src/app/pages/login/login.component.css
@@ -1,8 +1,3 @@
-.background-box {
-    background: #fff;
-    box-shadow: inset 0px 4px 4px 10px rgba(0, 0, 0, 0.25);
-}
-
 .card {
     background: #FFFF;
     mix-blend-mode: normal;
@@ -13,11 +8,26 @@
 }
 
 p {
-    font-family: Quando;
-    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
     letter-spacing: 0em;
-    text-align: left;
+}
+
+label {
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0em;
+}
+
+.btn {
+    background-color: #07065B;
+    color: white;    
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
 }
