Fix: page/signup.component

--- a/WebApp-collab/src/app/app.component.html
+++ b/WebApp-collab/src/app/app.component.html
@@ -1,10 +1,8 @@
 <nav class="navbar bg-primary fixed-top">
     <div class="container-fluid">
-        <a class="mx-4 navbar-brand text-white" href="/login">WebApp 
-           <p>
-                Colaboradores    
-           </p></a>
+        <a class="mx-2 navbar-brand text-white" href="/login">
+            Perfil de Colaboradores
+        </a>
     </div>
 </nav>
-
 <router-outlet></router-outlet>
