--- a/WebApp-collab/src/app/pages/login/login.component.html
+++ b/WebApp-collab/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="ms-3 mt-5 card">
             <div class="row gx-4">
                 <div class="col-12 col-md-4 col-sm-6">
-                    <img class="img-fluid" src="https://www.warlegend.net/wp-content/uploads/final-fantasy-xiv-ffxiv-endwalker-19-15-05-2021_0900979956-scaled-e1621180510315.jpg"
+                    <img class="img-fluid" src="https://www.ticket.com.br/blog/wp-content/uploads/sites/5/2017/08/1503109903.204237.jpg"
                     style="height: 100%; width: auto;"
                     >
                 </div>
@@ -16,13 +16,13 @@
                     <p class="mt-5 text-start fs-4">
                         Acesse a sua conta.
                     </p>
-                    <p class="mb-5 text-start fs-5">
+                    <p class="mb-4 text-start fs-5">
                         Visualize o perfil de cada um de seus colegas colaboradores.
                     </p>
                     <form class="my-3 mx-2">
-                        <div class="mt-2 col-md-4 col-sm-4">
+                        <div class="mt-1 col-md-4 col-sm-4">
                             <label for="inputEmail" class="form-label">
-                                Username:
+                                Nome de Usuário:
                             </label>
                             <input type="text" class="form-control">
                         </div>
