--- a/webapp/src/app/perfil/perfil-lista/perfil-lista.component.html
+++ b/webapp/src/app/perfil/perfil-lista/perfil-lista.component.html
@@ -1,9 +1,87 @@
-<h2>
-    Lista de Colaboradores
-</h2>
+<div class="card mt-3">
+    <div class="card-header">
+      <div class="float-left">
+        <h4>
+            Lista de Colaboradores
+        </h4>
+      </div>
+      <div class="float-right">
+        <button type="button" class="btn btn-primary" [routerLink]="['/new']">
+            Novo Colaborador
+        </button>
+        <button type="button" class="btn btn-secondary">
+            Atualizar
+        </button>
+      </div>
+    </div>
+    <div class="card-body">
+      <table class="table table-hover" >
+        <thead>
+          <tr>
+            <th>
+                #
+            </th>
+            <th>
+                Nome
+            </th>
+            <th>
+                Departamento
+            </th>
+            <th>
+                Grupo
+            </th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let resultado of resultados">
+          <tr >
+            <td>
+                {{ resultado }}
+            </td>
+            <td>
+                {{ resultado[1] }}
+            </td>
+            <td>
+                departamento
+            </td>
+            <td>
+                Grupo
+            </td>
+            <td>
+              <span class="float-right">
+                <button class="btn btn-outline-warning mb-1 btn-sm">
+                  Atualizar
+                </button>
+  
+                <button class="btn btn-outline-danger mb-1 btn-sm">
+                  Remover
+                </button>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+  
+      <ng-template #loading>
+        <span>Carregando Cursos...</span>
+      </ng-template>
+  
+      <!--ng-template #loadingError>
+        <div *ngIf="error$ | async; else loading" >
+          Erro ao carregar cursos. Tente novamente mais tarde.
+        </div>
+        <ng-template #loading>
+            <span>Carregando Cursos...</span>
+        </ng-template>
+      </ng-template -->
+    </div>
+  </div>
+  <!--
+  <ng-template #deleteModal>
+    <div class="modal-body text-center">
+      <p>Tem certeza que deseja remover esse curso?</p>
+      <button type="button" class="btn btn-default" (click)="onConfirmDelete()">Sim</button>
+      <button type="button" class="btn btn-primary" (click)="onDeclineDelete()">Nao</button>
+    </div>
+  </ng-template>
 
-<hr />
-
-<button type="button" class="btn btn-primary mb-2" [routerLink]="['/new']">
-    Adicionar Novo Colaborador
-</button>
+-->
