Fix: Login/Create

--- a/webapp/src/app/layout/home/home.component.html
+++ b/webapp/src/app/layout/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<header>
+    <nav class="navbar fixed-top navbar-dark bg-primary">
+      <a class="navbar-brand">Perfil de Colaboradores</a>
+    </nav>
+  </header>
+  
+  <section>
+    <main class="mt-5 p-2 container">
+      <router-outlet></router-outlet>
+    </main>
+  </section>
+  
