--- a/webapp/src/app/account/create-account/create-account.component.html
+++ b/webapp/src/app/account/create-account/create-account.component.html
@@ -2,16 +2,41 @@
 
 <form (ngSubmit)="onSubmit()" #form="ngForm">
   <div class="form-group">
-    <label>Nome</label>
+    <label>
+      Nome
+    </label>
     <input class="form-control" type="text" name="email" id="email" [(ngModel)]="account.name" required />
   </div>
   <div class="form-group">
-    <label>E-mail</label>
+    <label>
+      E-mail
+    </label>
     <input class="form-control" type="email" name="email" id="email" [(ngModel)]="account.email" required />
   </div>
   <div class="form-group">
-    <label>Senha</label>
+    <label>
+      Senha
+    </label>
     <input class="form-control" type="password" name="password" id="password" [(ngModel)]="account.password" required />
   </div>
+  <div class="form-group">
+    <label>
+      Departamento
+    </label>
+    <select class="form-control">
+      <option value="" selected disabled>Escolha o Departamento</option> 
+      <option *ngFor="let departament of departaments">{{ departament }}</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label>
+      Grupo
+    </label>
+    <select class="form-control">
+      <option value="" selected disabled>Escolha o Grupo</option> 
+      <option *ngFor="let group of groups">{{ group }}</option>
+    </select>
+  </div>
   <button type="submit" class="btn btn-primary btn-block" [disabled]="form.form.invalid">Criar minha conta</button>
+  <button type="button" class="btn btn-link btn-block" [routerLink]="['/login']">Login</button>
 </form>
