Fix: pages/html/css

--- a/webapp/src/app/layout/authentication/authentication.component.html
+++ b/webapp/src/app/layout/authentication/authentication.component.html
@@ -1,3 +1,5 @@
-<div class="authentication">
-    <router-outlet></router-outlet>
-</div>
+<section>
+    <div class="mt-5 p-2 authentication">
+        <router-outlet></router-outlet>
+    </div>
+</section>
