--- a/webapp/src/app/layout/home/home.component.html
+++ b/webapp/src/app/layout/home/home.component.html
@@ -1,6 +1,6 @@
 <header>
-    <nav class="navbar fixed-top navbar-dark bg-primary">
-      <a class="navbar-brand">Perfil de Colaboradores</a>
+    <nav class="navbar fixed-top navbar-dark">
+      <a class="mx-4 navbar-brand">Perfil de Colaboradores</a>
     </nav>
   </header>
   
