--- a/webapp/src/app/account/login/login.component.html
+++ b/webapp/src/app/account/login/login.component.html
@@ -1,18 +1,18 @@
-<h2 class="text-center">Entrar</h2>
+<h2 class="mt-5 text-center">Login</h2>
 
 <form (ngSubmit)="onSubmit()" #form="ngForm">
-  <div class="form-group">
+  <div class="mt-1 mx-2 form-group">
     <label>
       E-mail
     </label>
     <input class="form-control" type="email" name="email" id="email" [(ngModel)]="login.email" required />
   </div>
-  <div class="form-group">
+  <div class="mt-1 mx-2 form-group">
     <label>
       Senha
     </label>
     <input class="form-control" type="password" name="password" id="password" [(ngModel)]="login.password" required />
   </div>
-  <button type="submit" class="btn btn-primary btn-block" [disabled]="form.form.invalid">Entrar</button>
-  <button type="button" class="btn btn-link btn-block" [routerLink]="['/signup']">Criar conta</button>
+  <button type="submit" class="mt-2 mx-2 btn btn-primary btn-block" [disabled]="form.form.invalid">Entrar</button>
+  <button type="button" class="mt-2 mx-2 btn btn-link btn-block" [routerLink]="['/signup']">Criar conta</button>
 </form>
