--- a/webapp/src/app/perfil/perfil/perfil.component.html
+++ b/webapp/src/app/perfil/perfil/perfil.component.html
@@ -1,1 +1,52 @@
-<p>perfil works!</p>
+<h3 class="mx-2 my-3">
+    <strong>
+        Seu Perfil
+    </strong>
+</h3>
+<div>
+    <button class="col-auto mx-1 my-1 btn btn-perfil" [routerLink]="['/']">
+        Voltar para a Lista
+    </button>
+    <button class="col-auto mx-1 my-1 btn btn-perfil">
+        Alterar Dados
+    </button>
+</div>
+
+<div class="perfil-box text-justify">
+    <div class="row">
+        <div class="my-2 col-3 col-md-3 col-sm-3 col-lg-3">
+            <img src="https://avatarfiles.alphacoders.com/180/thumb-1920-180354.jpg" 
+             class="img-fluid"
+            >
+        </div>
+        <div class="col-3 col-md-3 col-sm-3 col-lg-3">
+            <h4>
+                Usuário
+            </h4>
+            <h5>
+                Email
+            </h5>
+            <h5>
+                Status:
+            </h5>
+        </div>
+        <div class="col-3 col-md-3 col-sm-3 col-lg-3">
+            <h3>
+                Departamento
+            </h3>
+            <h4>
+                Grupo
+            </h4>
+        </div>
+    </div>
+    <div class="text-center">
+        <h4>
+            Biografia
+        </h4>
+        <div>
+            <h5>
+                texto
+            </h5>
+        </div>
+    </div>
+</div>
