--- a/webapp/src/app/perfil/perfil-lista/perfil-lista.component.html
+++ b/webapp/src/app/perfil/perfil-lista/perfil-lista.component.html
@@ -14,7 +14,7 @@
         <button type="button" class="col-auto mx-1 my-1 btn btn-filt" (click)="onRefresh()">
             Atualizar
         </button>
-        <button type="button" class="col-auto mx-1 my-1 btn btn-filt">
+        <button type="button" class="col-auto mx-1 my-1 btn btn-filt" [routerLink]="['/perfil']">
           Meu Perfil
         </button>
         <div class="col-auto mx-1 my-1 input-group" style="width: 25rem;">
@@ -41,6 +41,9 @@
               ID
             </th>
             <th scope="col">
+              Foto
+            </th>
+            <th scope="col">
               Nome
             </th>
             <th scope="col">
@@ -58,6 +61,9 @@
           <tr *ngFor="let perfil of perfis">
             <td>
               {{ perfil.Id }}
+            </td>
+            <td>
+              <img [src]="perfil.Photo" class="img-fluid avatar">
             </td>
             <td>
               {{ perfil.Username }}
